- EsqlPath added to type() and execute() methods to allow for searching for ancestors in those methods. - Default map method uses DFS to force leaves of AST to be mapped before parents. - bfsMap method to map using BFS strategy. - All tests passing (except for comparison difference due to different dynamically-generated UUIDs). - Esql now raise an error when its value is of type ESQL. The value is a placeholder for the value of the ESQL node in the AST. If it is also and ESQL, mapping functions does not follow through it during processing. Thus, such values arebest stored as children of a tree node.